# DirectXShaderCompiler

./: CMakeLists.txt  Dockerfile
cmake/modules/: AddLLVM.cmake
include/dxc/: dxcapi.h  dxcapi.internal.h  dxcapi.intrinsics.h
include/dxc/HLSL/: DxilShaderModel.h  DxilSignatureElement.h  DxilValidation.h
include/dxc/Support/: Global.h  WinIncludes.h
include/llvm-c/: Core.h  Disassembler.h
include/llvm/MC/: MCStreamer.h
include/llvm/Support/: Allocator.h  ConvertUTF.h  FileSystem.h  Format.h  WinMacros.h  WinSAL.h  WinTypes.h  raw_ostream.h
include/llvm/TableGen/: Main.h
lib/Analysis/: CMakeLists.txt
lib/Bitcode/Reader/: BitcodeReader.cpp
lib/HLSL/: CMakeLists.txt  DxilRootSignature.cpp  HLModule.cpp  HLOperationLower.cpp  WaveSensitivityAnalysis.cpp
lib/IR/: Core.cpp  Function.cpp  Globals.cpp  Module.cpp
lib/MSSupport/: MSFileSystemImpl.cpp
lib/Support/: APFloat.cpp  ConvertUTFWrapper.cpp  DataStream.cpp  Debug.cpp  ErrorHandling.cpp  MSFileSystemBasic.cpp  MemoryBuffer.cpp  Path.cpp  Regex.cpp  assert.cpp  raw_ostream.cpp  regerror.c  regex_impl.h
tools/clang/lib/AST/: ASTContext.cpp  ASTContextHLSL.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  HlslTypes.cpp  NestedNameSpecifier.cpp
tools/clang/lib/Basic/: DiagnosticIDs.cpp  LangOptions.cpp  VirtualFileSystem.cpp
tools/clang/lib/CodeGen/: CGHLSLMS.cpp
tools/clang/tools/: CMakeLists.txt
tools/clang/tools/hlsl2spirv/: CMakeLists.txt  Hlsl2Spirv.cpp
tools/clang/unittests/: CMakeLists.txt
utils/: ixbuild.py
utils/TableGen/: TableGen.cpp
utils/hct/: hctdb_instrhelp.py
(+32 files in other folders)
